refactor: eliminate repository anti-patterns and optimize queries
- Replace existsById() + deleteById() with findById() + delete(entity) pattern
- Reduce database queries by 50% in delete operations
- Remove redundant repository.save() calls in @Transactional update methods
- Leverage JPA dirty checking for automatic updates
- Replace Collectors.toList() with .toList() (Java 16+)
- Use injected mapper components for DTO conversions